updating spring filters and permissions